# rainchain

./: .gitignore  Cargo.toml
src/: agent.rs  agents.rs  client.rs  conversation.rs  guidance_client.rs  main.rs  model_client.rs  server.rs  session.rs  session_old.rs  tools.rs
src/agent/: action_thought.rs
src/agents/: intent_detector.rs  thought_action_agent.rs
src/prompts/: guider_chat.txt  guider_generate_question.txt  guider_preamble.txt  guider_preamble_llama2chat.txt  intent_detection.txt  thought_action_response.txt  wizardvicuna_actionthought.txt
src/tools/: home_automation.rs  noop.rs  web_search.rs
webui/: index.html  styles.css  tsconfig.json
webui/js/: chatApiClient.js  script.js  ui.js
webui/ts/: chatApiClient.ts  script.ts  ui.ts
