[package]
name = "rainchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.19.0", features = ["native-tls"] }
crossbeam-channel = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
readability = "^0"
