[package]
name = "rainchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
readable-readability = "0.4"
ordered-float = "3.7"
futures = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1", features = ["full"] }
reqwest-eventsource = "0.4.0"
async-trait = "0.1.68"